# moore_machine_filter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: unit_test.yml
doc/: Makefile  filt.1  man.md
example/: nfa.dot  ta.dot  timed_word.txt  word.txt
experiments/: Makefile  README.md  abs2rel.awk  abs2rel.c  accel.dot  accel_filter.dot  calc_delay.sh  convMonaa.sh  copy_tex.sh  data_descritizer.awk  make_filt-time-accel.tsv.sh  make_filt-time.sh  make_filt-torque-time.sh  make_filt-torque-wc.sh  make_filt-wc.sh  make_no-filt-time.sh  pick_edges.awk  plot_filt-vs-monaa-0-10.sh  plot_filt_N-RAM.sh  plot_filt_N-time.sh  plot_filt_RAM-length.sh  plot_filt_rate-N.sh  plot_filt_rate-length.sh  plot_filt_time-length.sh  plot_filt_time-length_0-10.sh  plot_monaa_filt_time-N.sh  plot_monaa_filt_time-length.sh  plot_monaa_filt_time_0-10.sh  plot_png_all.sh  plot_tikz_all.sh  rel2abs.awk  rel2abs_truncate.awk  rel2abs_truncate.c  run_gtime.sh  run_gtime_2018-03-28.sh  run_gtime_2018-04-03.sh  run_gtime_2018-05-25-test.sh  run_gtime_2018-05-26.sh  run_gtime_2018-05-30.sh  run_gtime_maunaloa.sh  (+5 more)
experiments/calc_unused/: Makefile  calc_unused.cc  get_intervals.sh
experiments/dots/: gear.dot  gear_filter.dot  settling.dot  settling_filter.dot  torque.dot  torque_filter.dot
src/: add_counter.hh  automata.hh  bdm.hh  bit_buffer.hh  constraint.hh  construct_only.cc  dbm.hh  main.cc  moore_machine.hh  timed_automaton_parser.hh  timed_moore_machine.cc  timed_moore_machine.hh
test/: add_counter_test.cc  automata_test.cc  bdm_test.cc  bit_buffer_test.cc  dbm_test.cc  moore_machine_test.cc  timed_moore_machine_test.cc
